<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.chocolateshop.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background6"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/business_name_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/business_name_2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:scaleType="center"
            android:src="@drawable/dukkan05" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="6dp"
            android:textSize="24dp"
            android:textStyle="italic|bold"
            android:textColor="#1B5E20"
            android:text="@string/explanation" />

        <View
            android:id="@+id/line_view"
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="24dp"
            android:background="#1B5E20" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="6dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#212121"
            android:text="@string/open" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="6dp"
            android:textSize="16sp"
            android:textColor="#212121"
            android:text="@string/open_times" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="#212121"
            android:text="@string/open_updates" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="6dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#212121"
            android:text="@string/address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textColor="#212121"
            android:text="@string/address_given" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="6dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#212121"
            android:text="@string/phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:textColor="#212121"
            android:text="@string/phone_given" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="10dp"
                android:onClick="account"
                android:text="@string/account"
                android:textColor="#FFFF"
                android:textAllCaps="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="10dp"
                android:textColor="#FFFF"
                android:onClick="order"
                android:text="@string/order"
                android:textAllCaps="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="16dp"
                android:textColor="#FFFF"
                android:onClick="reivew"
                android:text="@string/products"
                android:textAllCaps="true" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>